# Custom-brushless-robotic-actuator

./: .gitignore  README.md
docs/: overview.md  repository-map.md
electronics/: README.md
mechanical/: README.md
mechanical/cad/actuator/: README.md  bearing-uxcell 6703-2rs 17x23x4 mm bearing amazon.step  encoder-shaft.stl  motor-housing.step  shaft.step  standoffs.stl
mechanical/cad/planetary-gearbox/: bottom-plate-encoder-test-piece.STL  bottom-plate.STL  carrier-base-v3.STL  carrier-top.STL  encoder-cover.STL  internal-gear.STL  mounting-bracket.STL  planet-gear-v2.STL  sun-gear-v2.STL  washer.STL
software/: README.md
software/ros2/odrive-stack/ws_odrive/src/joint_sine_publisher/: README.md  package.xml  setup.cfg  setup.py
software/ros2/odrive-stack/ws_odrive/src/joint_sine_publisher/config/: joint_publisher_config.yaml
software/ros2/odrive-stack/ws_odrive/src/joint_sine_publisher/joint_sine_publisher/: joint_publisher_node.py
software/ros2/odrive-stack/ws_odrive/src/joint_sine_publisher/launch/: joint_publisher_launch.py
software/ros2/odrive-stack/ws_odrive/src/ros2_control_template/: CMakeLists.txt  package.xml
software/ros2/odrive-stack/ws_odrive/src/ros2_control_template/config/: my_controllers.yaml
software/ros2/odrive-stack/ws_odrive/src/ros2_control_template/description/urdf/: my_robot.urdf.xacro
software/ros2/odrive-stack/ws_odrive/src/ros2_control_template/launch/: ros2_control.launch.py
