<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_control_template</name>
  <version>0.0.0</version>
  <description>ROS2 Control Template</description>
  <maintainer email="kevinwoodrobotics@gmail.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>odrive_ros2_control</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
